Sugati/src/objects/Selected_Itinerary_Content_Category__c.object
<CustomObject>
    <fields>
        <fullName>ICC_Image_ID__c</fullName>
        <label>Image ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Itinerary_Content_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICC_Page_No__c</fullName>
        <label>Page No</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SICC_Itinerary_Content_Category__c</fullName>
        <label>Itinerary Content Category</label>
        <referenceTo>Itinerary_Content_Category__c</referenceTo>
        <relationshipName>Selected_Itinerary_Content_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SICC_message1__c</fullName>
        <label>Message1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SICC_message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Selected Content Category</label>
    <nameField>
        <displayFormat>SICC-{0000000000}</displayFormat>
        <label>Itinerary Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Content Categories</pluralLabel>
    <recordTypes>
        <fullName>Categories</fullName>
        <active>true</active>
        <description>All Categories</description>
        <label>Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tailored_For_You</fullName>
        <active>true</active>
        <label>Tailored For You</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <label>Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>What_It_Costs</fullName>
        <active>true</active>
        <label>What It Costs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>